# bevy_tailwind

./: .gitignore  Cargo.toml  README.md  justfile  tailwind.config.js
.github/: ci.yml
.github/workflows/: ci.yml
examples/: grid.rs  playground.rs  simple.rs
macros/: Cargo.toml
macros/src/: background.rs  background_color.rs  border.rs  border_radius.rs  lib.rs  outline.rs  picking.rs  text.rs  transform.rs  val.rs  z_index.rs
macros/src/node/: align_content.rs  align_items.rs  align_self.rs  aspect_ratio.rs  border.rs  box_sizing.rs  display.rs  flex.rs  flex_basis.rs  flex_direction.rs  flex_grow.rs  flex_shrink.rs  flex_wrap.rs  gap.rs  grid_auto_columns.rs  grid_auto_flow.rs  grid_auto_rows.rs  grid_column.rs  grid_row.rs  grid_template.rs  grid_template_columns.rs  grid_template_rows.rs  justify_content.rs  justify_items.rs  justity_self.rs  margin.rs  mod.rs  overflow.rs  padding.rs  place_content.rs  place_items.rs  place_self.rs  position_type.rs  size.rs  spacing.rs  trbl.rs  width.rs
macros/src/utils/: color.rs  mod.rs  quote.rs  ui_rect.rs  val.rs
macros/tests/pass/: Cargo.toml
macros/tests/pass/src/: lib.rs
macros/tests/runner/: Cargo.toml
macros/tests/runner/src/: lib.rs
macros/tests/runner/src/snapshots/: test_runner__tests__test.snap
src/: lib.rs  testing.rs
