[package]
name = "bevy_tailwind"
version = "0.3.0"
edition = "2021"
authors = ["notmd"]
repository = "https://github.com/notmd/bevy_tailwind"
description = "TailwindCSS for Bevy"
license = "MIT"
keywords = ["bevy", "tailwind", "css", "styled"]

[workspace]
members = ["macros", "macros/tests/*"]

[dependencies]
bevy_tailwind_macro = { path = "macros" }
bevy = { version = "0.16.0", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
] }

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "x11",
] }
