[package]
name = "bevy_tailwind"
version = "0.4.0"
edition = "2021"
authors = ["notmd"]
repository = "https://github.com/notmd/bevy_tailwind"
description = "TailwindCSS for Bevy"
license = "MIT"
keywords = ["bevy", "tailwind", "css", "styled"]

[workspace]
members = ["macros", "macros/tests/runner", "macros/tests/pass"]

[dependencies]
bevy_tailwind_macro = { path = "macros", version = "0.4.0" }
bevy = { version = "0.17.0-rc", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
] }

[dev-dependencies]
bevy = { version = "0.17.0-rc", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "x11",
] }
