[package]
name = "bevy_tailwind_macro"
version = "0.4.0"
edition = "2024"
authors = ["notmd"]
repository = "https://github.com/notmd/bevy_tailwind"
description = "TailwindCSS for Bevy"
license = "MIT"
keywords = ["bevy", "tailwind", "css", "styled"]

[lib]
proc-macro = true

[dependencies]
indexmap = "2.7.0"
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.94", features = ["full"] }
